IRC/thelounge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge-deployment
  labels:
    app: thelounge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thelounge
      lbType: external

  template:
    metadata:
      labels:
        app: thelounge
        lbType: external
    spec:
      volumes:
      - name: thelounge-storage
        persistentVolumeClaim:
          claimName: thelounge-pvc

      #securityContext:
      #  runAsUser: 0
      #  fsGroup: 0
      #  runAsGroup: 0
      containers:
      - name: thelounge
        image: thelounge/thelounge
        ports:
        - containerPort: 9000
          name: "thelounge-port"
        volumeMounts:
        - name: thelounge-storage
          mountPath: "/var/opt/thelounge"
          subPath: "thelounge"
        resources:
          limits:
            memory: 1Gi
            cpu: "4"
