IRC/lanchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lanchat-service
  #metallb.universe.tf/loadBalancerIPs: lanchat.939.com
spec:
  type: ClusterIP
  ports:
  - name: inspircd
    protocol: TCP
    port: 6667
    targetPort: "inspircd-port"
  - name: inspircd-tls
    protocol: TCP
    port: 6697
    targetPort: "inspircd-tls"
  - name: thelounge
    protocol: TCP
    port: 80
    targetPort: "thelounge-port"
  selector:
    lbType: external
