IRC/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    metallb.universe.tf/loadBalancerIPs: lanchat.939.com
spec:
  rules:
    - host: "lanchat.939.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lanchat-service
              port:
                number: 80
